# AI-Act-Analyst

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  TASKS_USER.md  docker-compose.dev.yml  pyproject.toml
backend/adapters/: __init__.py  e5_embedder.py  fake_embedder.py  fake_llm.py  in_memory_store.py  pgvector_store.py  vllm_provider.py
backend/agent/: __init__.py  dependencies.py  errors.py  graph.py  report.py  state.py  trace.py
backend/api/: __init__.py  app.py  assess_runner.py  drift.py  export.py  extract.py  factories.py  logging.py  routes.py  run_store.py  schemas.py  settings.py  telemetry.py
backend/mcp_servers/: __init__.py  _common.py
backend/ports/: __init__.py  embedder.py  llm_provider.py  regulation.py  vector_store.py
backend/prompts/: __init__.py  loader.py
backend/rag/: __init__.py  chunking.py  corpus_diff.py  grounding.py  reranker.py  retrieval_cache.py  retrieve.py  rrf.py
docs/: reference_architecture.md  runbook_rollback.md
docs/adr/: 0001-glass-box-trace.md  0002-rules-layer-decides-tier.md  0003-regulation-as-plugin.md  0004-hybrid-retrieval-required.md  0005-ovh-hosting.md  0006-llmops-surface.md
eval/: gold_set.jsonl  judge.py  metrics.py  run_eval.py  smoke_set.jsonl
eval/baselines/: ai_act-en-616438858179.json
frontend/: .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/public/: chunks_pca3.json
frontend/src/: content.json
infra/postgres/: init.sql
infra/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfstate  variables.tf  versions.tf
prompts/: clarify_question_v1.j2  draft_documentation_annex_iv_v1.j2  draft_documentation_art_50_v1.j2  intake_extract_attributes_v1.j2  registry.yaml
regulations/ai_act/: __init__.py  document_templates.py  plugin.py  timeline.py
scripts/: drive_tool.py  index_corpus.py  project_chunks.py  reindex_and_eval.py
tests/: conftest.py  test_phase1_smoke.py  test_vllm_provider_unit.py
tests/agent/: conftest.py  test_clarify_loop.py  test_graph_e2e.py  test_grounding_e2e.py
tests/api/: conftest.py  test_assess_route.py  test_health_ready.py  test_online_grounding.py  test_telemetry.py
tests/eval/: test_gold_set_shape.py  test_judge.py  test_metrics.py
tests/grounding/: test_chunking.py  test_grounding_contract.py  test_parser.py  test_retrieval_smoke.py  test_rrf.py
(+140 files in other folders)
