[project]
name = "boussole"
version = "0.1.0"
description = "Sovereign EU AI Act compliance assessment agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Ceres Broker" }]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "httpx>=0.27",
    "tenacity>=8.3",
    "jinja2>=3.1",
]
rag = [
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
]
agent = [
    "langgraph>=0.2",
    "mcp>=1.0",
]
# Report rendering (Markdown + PDF) and PDF intake.
# WeasyPrint depends on Pango/Cairo/GDK-PixBuf at runtime:
#   macOS:  brew install pango cairo gdk-pixbuf libffi
#   Debian: apt-get install libpango-1.0-0 libpangoft2-1.0-0 libffi-dev
# Without these, importing weasyprint will fail and the /assess/{id}/export.pdf
# endpoint will surface a typed 503; the .md endpoint stays available.
report = [
    "pypdf>=4.3",
    "markdown>=3.6",
    "weasyprint>=62.3",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "types-pyyaml",
    "pre-commit>=3.7",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "regulations"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "langgraph.*",
    "mcp.*",
    "pgvector.*",
    "rank_bm25.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: requires docker-compose services (Postgres, vLLM)",
    "eval: runs against the eval gold set",
]
